# src/Oip/SwaggerFiles/swagger-base.json
@@ -1015,6 +1015,45 @@
           }
         }
       }
+    },
+    "/api/security/get-realm-roles": {
+      "get": {
+        "tags": [
+          "Security"
+        ],
+        "summary": "Retrieves all realm roles from Keycloak.",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
